fix button alignment in forms

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -681,23 +681,16 @@ a.basket-summary-empty-cta.btn,
 .widget.profile form button.btn, 
 .signupform fieldset button, 
 .blogsearch form button.blog-search-submit-button {
-    position: absolute;
     height: 42px;
     padding: 0px 18px;
     font-size: 14px;
+    vertical-align: top;
 }
 
 .form-group.productlist-search .btn {
     height: 42px;
     padding: 0px 18px;
     font-size: 14px;
-}
-
-@media @tablet {
-	.blogsearch form button,
-	.widget.profile form button {
-		margin-top: 5px;
-	}
 }
 
 .ecombasket-summary-link {
